# ChangeLog for app-portage/pclean
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pclean-0.14 (21 Mar 2011)

  21 Mar 2011; <alunduil@gentoo.org> +pclean-0.14.ebuild:
  Adding the new release of pclean.

*pclean-0.13 (14 Jan 2011)

  14 Jan 2011; <alunduil@gentoo.org> -pclean-0.11.ebuild, +pclean-0.13.ebuild:
  Adding pclean-0.13

  06 Dec 2010; <alunduil@gentoo.org> -pclean-0.9.ebuild, -pclean-0.10.ebuild:
  Removing older versions of pclean

*pclean-0.12 (06 Dec 2010)

  06 Dec 2010; <alunduil@gentoo.org> +pclean-0.12.ebuild:
  Adding pclean-0.12

*pclean-0.11 (27 Nov 2010)

  27 Nov 2010; <alunduil@gentoo.org> +pclean-0.11.ebuild:
  Adding pclean 0.11

  09 Nov 2010; <alunduil@gentoo.org> -pclean-0.7.ebuild, -pclean-0.8.ebuild:
  Removing dated versions of pcleanwq

*pclean-0.10 (09 Nov 2010)

  09 Nov 2010; <alunduil@gentoo.org> +pclean-0.10.ebuild:
  Adding pclean-0.10

*pclean-0.9 (07 Nov 2010)

  07 Nov 2010; <alunduil@gentoo.org> +pclean-0.9.ebuild:
  Adding pclean-0.9

*pclean-0.8 (06 Nov 2010)

  06 Nov 2010; <alunduil@gentoo.org> -pclean-0.3.ebuild, -pclean-0.4.ebuild,
  -pclean-0.5.ebuild, -pclean-0.6.ebuild, +pclean-0.8.ebuild:
  Adding 0.8

*pclean-0.7 (22 Oct 2010)

  22 Oct 2010; <alunduil@gentoo.org> +pclean-0.7.ebuild:
  Adding pclean-0.7

*pclean-0.6 (07 Oct 2010)

  07 Oct 2010; <alunduil@gentoo.org> +pclean-0.6.ebuild:
  Adding pclean-0.6

*pclean-0.5 (26 Aug 2010)

  26 Aug 2010; <alunduil@gentoo.org> +pclean-0.5.ebuild:
  Adding a new release of pclean

  22 Aug 2010; <alunduil@gentoo.org> pclean-0.3.ebuild, pclean-0.4.ebuild:
  Adding initial pclean ebuilds
