@@ -1,8 +1,6 @@
-DIST pclean-0.12.tar.bz2 10539 RMD160 92fbdcf4b7217994fb3b702f51c3ad3ff811b79b SHA1 cd5f52711f775f9bc960661b194fdbd51f402ccb SHA256 edeb16eba0185b87561ca6b7379fafbf012540273eaade354bae2990aa701afa
 DIST pclean-0.13.tar.bz2 10470 RMD160 a624ea14902f672445d7da6f5ff4657de86a3953 SHA1 61c6cbdad57e9cb5c34da57cd2708a242fae1cb3 SHA256 8ad6b2f71896decb5d242c4d98aa0f93387f48317d80d5fce591cd6b1842295a
 DIST pclean-0.14.tar.bz2 10515 RMD160 2d23070d3f73f198ca1be72b558c1c144f5c52aa SHA1 811b590a021be6e1b90f41983577d61b5cd5da8a SHA256 0a447d7770e74460373c52e902676a90e7ca119dfca04ba2780436e45a1786d5
-EBUILD pclean-0.12.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
 EBUILD pclean-0.13.ebuild 709 RMD160 997ccaeea7b5808f93227ffbe9afea237300a001 SHA1 48fba8c7c085cb804a924cc6963d91b26148a5ed SHA256 f9e3a4122f2fa619283478f9363ca25ae260063e057433157bb6d9f1a5cbf7c9
 EBUILD pclean-0.14.ebuild 709 RMD160 997ccaeea7b5808f93227ffbe9afea237300a001 SHA1 48fba8c7c085cb804a924cc6963d91b26148a5ed SHA256 f9e3a4122f2fa619283478f9363ca25ae260063e057433157bb6d9f1a5cbf7c9
-MISC ChangeLog 1647 RMD160 1f2fe58d6c574af6f1a368849a487da0f4db5ec5 SHA1 69f6c2a5f1084acc554cce365e4c946b526ede6a SHA256 dd3485606f1928592e1aa698d24e00d980336e68beb18864d2ea06d659802f15
+MISC ChangeLog 1737 RMD160 f4d82c07f4a2927062de69045a335de52694898b SHA1 386fd1d50860ad411fe40cc106962ab2ae161954 SHA256 84caeb15fd9fababb38d141fdf33b5fee6272bde8e8eb2ad5c9850eaeaabd527
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
