@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Mar 2011; <alunduil@gentoo.org> -pclean-0.12.ebuild:
+  Removing older pclean build.
+
 *pclean-0.14 (21 Mar 2011)
 
   21 Mar 2011; <alunduil@gentoo.org> +pclean-0.14.ebuild:
